<resources>
    <string name="app_name">RentApp</string>
    <string name="transactions_text">Transactions</string>
    <string name="home_text">Home</string>
    <string name="houses_apartment_text"><![CDATA[Houses & Apartment]]></string>
    <string name="properties_text">Properties</string>
    <string name="login_text">Login</string>
    <string name="admin_text">Admin</string>
    <string name="email_text">email</string>
    <string name="credentials_text">credentials</string>
    <string name="id_text">id</string>
    <string name="image_logo_text">Image Logo</string>
    <string name="email_address_text">Email Address…</string>
    <string name="password_text">Password</string>
    <string name="register_prompt">Don\'t have an account yet?</string>
    <string name="register_text">Register</string>
    <string name="sign_in_text">Sign In</string>
    <string name="users_text">Users</string>
    <string name="welcome_admin_text">Welcome Admin</string>
    <string name="display_users_text">Display Users</string>
    <string name="profile_text">Profile</string>
    <string name="user_avatar_text">User Avatar</string>
    <string name="default_user_text">Eunice Vusena</string>
    <string name="front_room_text">Front Room</string>
    <string name="logout_text">Logout</string>
    <string name="name_hint">Name…</string>
    <string name="phone_hint">Phone…</string>
    <string name="login_prompt_text">Already have an account?</string>
    <string name="app_logo_text">App Logo</string>
    <string name="request_permission_text">Request Permission</string>
    <string name="request_permission_body">For the application to work as expected you gotta accept the requested permissions,lest it won\'t work properly.</string>
    <string name="grant_permission_text">Grant Permission</string>
    <string name="role_hint">Role…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_text">Location…</string>
    <string name="property_image_text">Property Image</string>
    <string name="select_image_text">Select Image</string>
    <string name="number_of_rooms_text">Number Of Rooms</string>
    <string name="cost_per_room_text">Cost Per Room</string>
    <string name="add_house_text">Add House</string>
    <string name="cost_per_room_tv">Cost Per Room</string>
    <string name="choose_user_hint">Choose User…</string>
    <string name="book_text">Book</string>
    <string name="my_houses_text">My Houses</string>
    <string name="booking_requests_text">Booking Requests</string>
    <string name="requests_text">Requests</string>
    <string name="name_text">Name</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="user_text">User</string>
    <string name="amount_hint">Amount...</string>
    <string name="pay_text">Pay</string>
</resources>
